this is all for tonight folks, reverted to Annies original, cleaned up, edited down bootstrap, AKA bootstripped.  Now I need to debug the layout issues, integrate fitvids, and masonry.

--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,68 @@
-
-
-footer p {
-	color:#ccc;
-	text-shadow: 1px 1px 0px #fff;
-	float:right;
+/*/Overwriting bootstripped navigation/*/
+.nav {
+	border:1px dashed #ccc;	
 }
+
+.nav > li > a {
+	-webkit-transition:background 80ms linear;  
+   	-moz-transition:background 80ms linear;  
+   	-o-transition:background 80ms linear;  
+   	transition:background 80ms linear;  
+  	text-align:center;
+	margin: 0 auto 10px;
+	padding: 10px 0;
+	background:#090;
+	color:white;
+	display:block;
+	font-weight: bold;
+	font-size:18px;
+}
+
+.nav > li > a:hover {
+  	text-decoration: none;
+  	color:#fff;
+  	background-color: #09f;
+}
+
 
 .project {
 	position: relative;
-	height:322px; 
-	width:300px;
-	border:1px solid red;
+	text-align:center; /*/To keep the images centered when everything slims/*/
+	border:1px dashed #ccc;	
 }
 
 .project img {
-	max-width: 100%; 
-
+	height:300px; 
+	width:300px;
 }
+
+.blog {
+  	color:#09f;
+  	padding:18px 15px 10px 15px;
+  	cursor:pointer;
+  	max-width:160px;
+	border:1px dashed #ccc;	
+}
+
+.description {
+	font-weight: bold;
+	color:#09f;
+	margin-bottom: 10px;
+	line-height: 20px;
+	font-size: 15px;
+	height:80px;
+	overflow:hidden;
+	text-overflow: ellipsis; 
+	-o-text-overflow: ellipsis;  
+	-moz-text-overflow: ellipsis; 
+	-webkit-text-overflow: ellipsis; 
+}
+
 .people {
 	margin-top: 20px;
-	border:1px solid red;
+	border:1px dashed #ccc;	
 	background:black;
+	width:200px;
 }
 .people img {
   position:relative;
@@ -49,59 +91,25 @@ footer p {
 h4 {
 	color:#09f;
 }
-.blog {
-  color:#09f;
-  padding:18px 15px 10px 15px;
-  cursor:pointer;
-  border:1px dashed #ccc;
-}
-
-.description {
-	font-weight: bold;
-	color:#09f;
-	margin-bottom: 10px;
-	line-height: 20px;
-	font-size: 15px;
-	height:80px;
-	overflow:hidden;
-	text-overflow: ellipsis; 
-	-o-text-overflow: ellipsis;  
-	-moz-text-overflow: ellipsis; 
-	-webkit-text-overflow: ellipsis; 
-}
-
-.cyan-block {
-	border:0px solid #09f;
-	margin-bottom:15px;
-	padding:0px;
-}
 
 
-.nav > li > a {
-	-webkit-transition:background 80ms linear;  
-   	-moz-transition:background 80ms linear;  
-   	-o-transition:background 80ms linear;  
-   	transition:background 80ms linear;  
-  	text-align:center;
-	margin: 0 auto 10px;
-	padding: 10px 0;
-	background:#090;
-	display:block;
-	font-weight: bold;
-	font-size:18px;
-	border:1px solid #080;
-
+.title {
+	height:300px;
+	padding:20px 0;
+	border:1px dashed #ccc;	
 }
 
-.nav > li > a:hover {
-  text-decoration: none;
-  color:#fff;
-  background-color: #09f;
-  border:1px solid #0085dd;
+.title h1 {
+	font-size:48px;
+	line-height:54px;
+	
 }
-.negative {
-	margin-top:-110px;
+footer p {
+	color:#ccc;
+	text-shadow: 1px 1px 0px #fff;
+	float:right;
 }
+
 /*/
 .fadeIn	{
 	-webkit-animation:fadeIn ease-in 1;
